--- a/1D-MUSIC.ipynb
+++ b/1D-MUSIC.ipynb
@@ -299,7 +299,7 @@
    ],
    "source": [
     "# Let's create an array\n",
-    "my_array = np.array([11,22,33,44,55,66,77,88],dtype=np.complex64)\n",
+    "my_array = np.array([11,22,33,44,55,66,77,88])\n",
     "\n",
     "# Other data types\n",
     "# my_array = np.array([11,22,33,44,55,66,77,88],dtype=np.complex64)\n",
@@ -369,7 +369,8 @@
     "Start from 11 and return values with increments\n",
     "of 11 until 89 is reached. \n",
     "'''\n",
-    "print('np.arange: ', my_array)"
+    "print('np.arange: ')\n",
+    "arrayviz(my_array)"
    ]
   },
   {
@@ -386,7 +387,8 @@
     "'''\n",
     "Return 8 evenly spaced numbers over 11-88 interval\n",
     "'''\n",
-    "print('np.linspace: ', my_array)"
+    "print('np.linspace: ')\n",
+    "arrayviz(my_array)"
    ]
   },
   {
@@ -400,7 +402,8 @@
    "outputs": [],
    "source": [
     "zrs  = np.zeros(8) # Returns of array of zeros with 8 elements\n",
-    "print('np.zeros: ', zrs) "
+    "print('np.zeros: ') \n",
+    "arrayviz(zrs)"
    ]
   },
   {
@@ -414,7 +417,8 @@
    "outputs": [],
    "source": [
     "ones  = np.ones(8).astype('int16') # Returns of array of ones with 8 elements\n",
-    "print('np.ones: ', ones)"
+    "print('np.ones: ')\n",
+    "arrayviz(ones)"
    ]
   },
   {
@@ -428,7 +432,8 @@
    "outputs": [],
    "source": [
     "full  = np.full(8,10) # Returns of array of desired value with 8 elements\n",
-    "print('np.full: ', full)"
+    "print('np.full: ')\n",
+    "arrayviz(full)"
    ]
   },
   {
@@ -446,7 +451,8 @@
     "Returns of array of 8 elements w ithout EXPLICITLY INITIALIZING it with certain values\n",
     "The values we'll see are arbitrary, i.e. as they exist in the memory address allocated for our array.  \n",
     "'''\n",
-    "print('np.empty: ', empty)"
+    "print('np.empty: ')\n",
+    "arrayviz(epmty)"
    ]
   },
   {
@@ -1659,9 +1665,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"560\"\n",
+       "            height=\"315\"\n",
+       "            src=\"https://www.youtube.com/embed/x84m3YyO2oU\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fb35e2097f0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import IFrame\n",
     "IFrame('https://www.youtube.com/embed/x84m3YyO2oU',560,315)"
@@ -1974,17 +2002,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"560\"\n",
+       "            height=\"315\"\n",
+       "            src=\"https://www.youtube.com/embed/g3ENX3aHlqU\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fb35e2096d8>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import IFrame\n",
     "IFrame('https://www.youtube.com/embed/g3ENX3aHlqU',560,315)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
